@@ -26,7 +26,6 @@ export(rbitlyApi)
 export(rbitlyApi_up)
 export(user_Info)
 export(user_LinkHistory)
-export(user_LinkHistoryGoogl)
 export(user_Metrics_Clicks)
 export(user_Metrics_Countries)
 export(user_Metrics_PopularLinks)
